colang-cli/tests/samples/features/trait-bounds/good/single_method.co
trait Intable {
  fun to_int(self): int
}

struct Foo : Intable {
  fun to_int(self): int {
    42
  }
}

struct Wrapper<T: Intable> {
  value: T;

  fun bar(self): int {
    self.value.to_int()
  }
}

fun main() { }
