colang-cli/tests/samples/features/trait-bounds/compile_error/conflicting_methods.co
trait IntoInt {
  fun into(self): int
}

trait IntoChar {
  fun into(self): char
}

struct Foo<T: IntoInt + IntoChar> { }

fun main() { }
